# BackBoiler/src/UserModel/serializers.py
@@ -4,7 +4,7 @@ from .models import User
 class UserSerializer(serializers.ModelSerializer):
     class Meta:
         model = User
-        fields = ['id', 'uuid', 'email', 'username', 'is_active', 'is_staff', 'is_superuser', 'date_joined', 'last_login']
-        read_only_fields = ['id', 'is_active']
-    
+        fields = ['id', 'uuid', 'email', 'phone_number', 'username', 'is_active', 'is_staff', 'is_superuser', 'is_online',
+                  'last_activity_at', 'date_joined', 'last_login']
+        read_only_fields = ['id', 'is_active', 'is_online']
     
